--- a/styles.css
+++ b/styles.css
@@ -2247,7 +2247,7 @@ body {
 
      .product-card .product-code {
         font-size: 12px;
-        color: #666666;
+        color: #ff6200;
         margin-bottom: 8px;
         text-align: center;
     }
@@ -2318,7 +2318,7 @@ body {
     .product-grid.list-view .product-card .product-code {
         font-size: 12px;
         text-align: center;
-        color: #666666;
+        color: #ff6200;
     }
 
 
