--- a/styles.css
+++ b/styles.css
@@ -513,8 +513,7 @@ body {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        background-color: rgba(0, 0, 0, 0.3);
-        color: #FFFFFF;
+        color: #080808;
         border: none;
         padding: 8px;
         width: 32px;
@@ -526,7 +525,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: background-color 0.3s ease, opacity 0.3s ease;
+        
         opacity: 0;
     }
     .product-page .main-image-wrapper:hover .carousel-btn {
@@ -555,7 +554,7 @@ body {
         justify-content: center;
         opacity: 0;
         visibility: hidden;
-        transition: opacity 0.3s ease, visibility 0.3s ease;
+        
     }
     .image-modal.active {
         display: flex;
@@ -576,13 +575,9 @@ body {
         object-fit: contain;
         display: block;
         border-radius: 8px;
-        transform: scale(1);
-        transition: transform 0.3s ease;
+        
     }
-    #modal-image:hover {
-        transform: scale(1.2);
-        cursor: zoom-in;
-    }
+    
     .modal-close {
         position: absolute;
         top: 20px;
@@ -597,15 +592,12 @@ body {
         top: 50%;
         width: 32px;
         height: 32px;
-        transform: translateY(-50%);
-        background-color: rgba(0, 0, 0, 0.0);
-        color: #7a7a7a;
+        color: #ff6200;
         border: none;
         padding: 15px;
         cursor: pointer;
         font-size: 24px;
         border-radius: 50%;
-        transition: background-color 0.5s ease;
         z-index: 2100;
     }
     .modal-btn.prev {
@@ -614,10 +606,7 @@ body {
     .modal-btn.next {
         right: 150px;
     }
-    .modal-btn:hover {
-        background-color: rgba(0, 0, 0, 0.0);
-        color: #FFFFFF;
-    }
+    
 }
 
 @media (max-width: 768px) {
@@ -686,16 +675,15 @@ body {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        background-color: rgba(0, 0, 0, 0.3);
-        color: #FFFFFF;
+        color: #ff6200;
+        background-color: #ffffff00;
         border: none;
         padding: 10px;
-        width: 30px; /* Ligeramente más pequeño para móvil */
-        height: 30px;
+        width: 40px; /* Ligeramente más pequeño para móvil */
+        height: 40px;
         cursor: pointer;
-        font-size: 20px;
+        font-size: 30px;
         border-radius: 50%;
-        transition: background-color 0.3s ease;
         z-index: 2100;
     }
 
@@ -707,10 +695,7 @@ body {
         right: 10px; /* Ajustado para móvil */
     }
 
-    .modal-btn:hover {
-        background-color: rgba(0, 0, 0, 0.6);
-        color: #FFFFFF;
-    }
+    
 }
 
 /* Responsividad para la galería de imágenes */
@@ -748,11 +733,7 @@ body {
     margin-bottom: 15px;
 }
 
-.stock {
-    color: #00A650;
-    font-size: 16px;
-    margin-bottom: 20px;
-}
+
 
 .buy-btn {
     background-color: #02366e;
