--- a/styles.css
+++ b/styles.css
@@ -507,6 +507,22 @@ body {
     z-index: 1;
     cursor: pointer;
 }
+.product-page .product-price-before-tax {
+font-size: 0.7rem;
+    color: #333;
+    text-align: left;
+    margin: 10px 0;
+    font-weight: bold; /* Opcional para destacar el código */
+    
+}
+.product-page .product-price {
+font-size: 1.1rem;
+    color: #02366e;
+    text-align: left;
+    margin: 10px 0;
+    font-weight: bold; /* Opcional para destacar el código */
+    
+}
 
 @media (min-width: 769px) {
     .product-page .carousel-btn {
@@ -2391,7 +2407,7 @@ body {
 }
 
 .product-price {
-    font-size: 18px;
+    font-size: 17px;
     font-weight: bold;
     color: #02366e;
     text-align: center;
@@ -2401,4 +2417,56 @@ body {
     font-size: 14px;
     color: #ff6200;
     margin: 5px 0;
+}
+.product-price-contado {
+    font-size: 16px;
+    font-weight: bold;
+    color: #FF6200; /* Naranja para destacar el precio con descuento */
+    text-align: center;
+    margin: 5px 0;
+}
+
+.agotado-label {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #FF6200;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 4px;
+    z-index: 10;
+    text-transform: uppercase;
+}
+
+.product-card.agotado {
+    opacity: 0.8; /* Ligera opacidad para indicar que está agotado */
+}
+
+@media (max-width: 768px) {
+    .agotado-label {
+        font-size: 10px;
+        padding: 3px 8px;
+        top: 5px;
+        left: 5px;
+    }
+    .product-grid.list-view .agotado-label,
+    .product-grid.grid-view .agotado-label {
+        font-size: 9px;
+        padding: 2px 6px;
+    }
+}
+.product-stock {
+    font-size: 0.7rem;
+    color: #333;
+    margin: 10px 0;
+    font-weight: bold; /* Opcional para destacar el código */
+}
+.product-price-before-tax {
+font-size: 0.5rem;
+    color: #333;
+    margin: 10px 0;
+    font-weight: bold; /* Opcional para destacar el código */
+    
 }
