--- a/styles.css
+++ b/styles.css
@@ -338,7 +338,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%; /* Ocupa todo el ancho disponible */
-    height: 300px; /* Altura fija para todas las tarjetas */
+    height: 350px; /* Altura fija para todas las tarjetas */
     display: flex;
     flex-direction: column;
     justify-content: space-between; /* Distribuye el contenido */
@@ -355,6 +355,13 @@ body {
     flex: 1; /* Crece para llenar el espacio disponible */
     width: 100%;
     padding-top: 10px;
+}
+.product-card .product-price {
+    font-size: 20px;
+    font-weight: bold;
+    color: #02366e;
+    text-align: center;
+    margin: 5px 0;
 }
 
 .product-card:hover {
@@ -458,6 +465,21 @@ body {
     padding: 20px;
     border-radius: 8px;
 }
+/* Modificar el header solo en la página de producto */
+.product-page .header {
+    transform: translateY(0); /* Header visible por defecto */
+}
+
+/* Clase para ocultar el header */
+.product-page .header.hidden {
+    transform: translateY(-60%); /* Mueve el header fuera de la pantalla hacia arriba */
+    transition: transform 0.3s ease;
+}
+/* Header parcialmente visible (scroll hacia arriba) */
+.product-page .header.show {
+    transform: translateY(0%); /* Muestra solo el 40% superior del header */
+    transition: transform 0.3s ease;
+}
 
 .product-images {
     display: flex;
@@ -507,23 +529,46 @@ body {
     z-index: 1;
     cursor: pointer;
 }
-.product-page .product-price-before-tax {
-font-size: 0.7rem;
+.product-page .product-price-anterior {
+font-size: 0.8rem;
     color: #333;
     text-align: left;
-    margin: 10px 0;
+    margin: 5px 0;
     font-weight: bold; /* Opcional para destacar el código */
     
 }
 .product-page .product-price {
-font-size: 1.1rem;
+font-size: 1.5rem;
     color: #02366e;
     text-align: left;
     margin: 10px 0;
     font-weight: bold; /* Opcional para destacar el código */
     
 }
+.product-page .product-code {
+font-size: 1.2rem;
+    color: #ff6200;
+    text-align: left;
+    font-weight: bold;
 
+}
+
+.product-page .product-stock-sucursal {
+font-size: 1rem;
+    color: #001e3d9d;
+    text-align: left;
+    margin: 10px 0; /* Espaciado */
+    font-weight: bold;
+
+}
+.product-page .product-stock-deposito {
+font-size: 0.8rem;
+    color: #001e3d9d;
+    text-align: left;
+    margin: 5px 0; /* Menos espaciado */
+    font-weight: bold;
+
+}
 @media (min-width: 769px) {
     .product-page .carousel-btn {
         position: absolute;
@@ -2466,7 +2511,48 @@ font-size: 1.1rem;
 .product-price-before-tax {
 font-size: 0.5rem;
     color: #333;
+    text-align: center;
     margin: 10px 0;
     font-weight: bold; /* Opcional para destacar el código */
     
+}
+
+.precios-container {
+    margin-bottom: 1rem;
+}
+
+.product-price {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #2c3e50;
+    margin: 0;
+}
+
+.product-price-anterior {
+    font-size: 1rem;
+    color: #7f8c8d;
+    text-decoration: none;
+    margin: 0.5rem 0 0;
+}
+
+/* Estilo general para las cuotas */
+.product-cuota {
+    font-size: 1rem;
+    color: #333;
+    margin: 5px 0;
+}
+
+/* Estilo específico para destacar las 12 cuotas (con interés) */
+.product-cuota-12 {
+    font-style: none; /* Para diferenciar las cuotas con interés */
+    font-size: 1rem;
+    color: #333;
+    margin: 5px 0;
+}
+
+/* Asegurar que el contenedor de precios se vea ordenado */
+.precios-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
